--- a/style.css
+++ b/style.css
@@ -110,47 +110,66 @@ nav{
 }
 
 
-.projects-sec{
-    background-color: #cabbad; 
+.project-sec{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-inline: auto;
     margin-top: 9rem;
+
+
     #project-title{
         font-size: 2rem;
-        align-self:flex-start;
-        margin-left: 13rem;
         margin-top: 5rem;
         color: #4B3832;
     }
 }
 
-.projects{
+.project-con{
     display: grid;
-    grid-template-rows: 300px 300px;
+    grid-template-rows: 360px 360px;
     grid-template-columns: 320px 320px 320px;
-    gap: 5rem;
+    gap: 4rem;
     justify-items: center;
-    height: 1100px;
-
-   
-
+    height: 1200px;
 }
 
-.project1{
+.projects{
     display: flex;
     flex-direction: column;
     padding: 1rem;
     align-items: center;
     width: 350px;
-    height: 350px;
+    height: 400px;
     background-color: rgb(241, 241, 241);
     border: none;
     border-radius: 30px;
     margin-top: 2rem;
     box-shadow: 0px 5px 38px -7px rgba(158,149,158,1);
 
-    .buttons{
+    h1{
+        font-size: 1.2rem;
+    }
+
+    .web-techno{
+        display: flex;
+        justify-content: center;
+        width: 60%;
+        color: rgb(47, 102, 155);
+        font-weight: 600;
+        margin-top: auto;
+
+        p{
+            padding-block: .2rem;
+            padding-inline: .5rem;
+            border-radius: 5px;
+            background-color: rgb(70, 69, 69);
+            color: rgb(223, 223, 223);
+            margin-inline: .2rem;
+        }
+    }
+
+    .buttons-con{
         margin-top: auto;
         display: flex;
         
